[package]
name = "herbie-lint"
version = "0.4.0"
edition = "2024"
description = "Dylint lint for detecting numerically unstable floating-point expressions"
license = "BlueOak-1.0.0"
repository = "https://github.com/urschrei/herbie-lint"
keywords = ["lint", "numerics", "floating-point", "dylint"]
categories = ["development-tools"]
# Cannot publish to crates.io due to clippy_utils git dependency
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"
rusqlite = "0.38"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
wait-timeout = "0.2"
itertools = "0.14"

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
